<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mskr</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_layer">Add Layer</string>
    <string name="action_save">Save</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="click_to_load_image">Click to load image</string>
    <string name="select_an_image">Select an Image</string>
    <string name="share_image">Share Image</string>
    <string name="out_of_memory_title">Out of memory</string>
    <string name="out_of_memory_message">Oh noes! It looks like the selected image is too big to be loaded.</string>
    <string name="okay">Okay :(</string>
    <string name="select_a_mask">msk:</string>

    <string-array name="all_masks">
        <item>sqr</item>
        <item>crcl</item>
        <item>trngl</item>
        <item>POW</item>
        <item>plrd</item>
        <item>x</item>
        <item>eqlty</item>
        <item>hrt</item>
        <item>dmnd</item>
    </string-array>

</resources>