<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add_layer"
        android:icon="@drawable/ic_action_add_light"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_add_layer"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save_light"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete_light"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about_light"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_about"/>

</menu>